--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Nonbeenary Designs
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://nonbeenary.com
 SHOW_CREATED_TIMESTAMP=false
